--- a/frontend/studente/src/pages/institute/institute.html
+++ b/frontend/studente/src/pages/institute/institute.html
@@ -13,7 +13,7 @@
   <div class="row-add-stage">
   </div>
   <ion-list>
-    <ion-card  *ngFor="let registration of registrations| experiencefilter:filter:'title'|  orderBy:'dateFrom':false">
+    <ion-card  *ngFor="let registration of registrations| experiencefilter:filter:'title'|  orderBy:'dateFrom':false; let i = index">
       <!--<div class="registration-expandable-list">
         <div class="registration-title">{{registration.course}}</div>
         <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(registration)"> <ion-icon class="registration-expansion-icon" item-right [name]="isDetailsShown(registration) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
@@ -24,7 +24,7 @@
         <div class="registration-title"><span class="registration-institute-label"> {{'registration_class_label'|translate}}</span>{{registration.classroom}}</div>
         <div class="registration-title"><span class="registration-institute-label"> {{'registration_teachingUnit_label'|translate}}</span>{{teachingUnit.name}}</div>
       </div>-->
-       <registration-panel [registration]="registration"[index]="registrations.indexOf(registration)" [teachingUnit]="teachingUnit"></registration-panel>
+       <registration-panel [registration]="registration" [index]="i" [teachingUnit]="teachingUnit"></registration-panel>
     </ion-card>
   </ion-list>
 </ion-content>
