--- a/frontend/studente/src/pages/certifications/certification.html
+++ b/frontend/studente/src/pages/certifications/certification.html
@@ -1,9 +1,9 @@
 <div class="experience-expandable-list" (click)="toggle()">
   <div class="experience-title"><span *ngIf="certification.experience.attributes.lang">{{certification.experience.attributes.lang}}</span> {{certification.experience.attributes.title}}</div>
   <div class="experience-document"><span *ngIf="certification.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!certification.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
-  <button class="stage-expansion" clear ion-button icon-only> <ion-icon class="experience-expansion-icon" item-right [name]="opened ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+  <button class="stage-expansion" clear ion-button icon-only> <ion-icon class="experience-expansion-icon" item-right [name]="index == 0 ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
 </div>
-<div padding *ngIf="opened">
+<div padding *ngIf="index == 0">
   <!--<div padding>-->
   <div class="experience-title" *ngIf="certification.experience.attributes.dateFrom"> <span class="registration-institute-label">{{'document_dateFrom_label'|translate}}</span>{{certification.experience.attributes.dateFrom
     |date}}
