--- a/frontend/studente/src/pages/jobs/jobs.html
+++ b/frontend/studente/src/pages/jobs/jobs.html
@@ -20,9 +20,11 @@
           <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
           <ion-item>
             <ion-label>{{'job_order_label'|translate}}</ion-label>
-            <ion-select [(ngModel)]="order">
-              <ion-option value=true>A-Z</ion-option>
-              <ion-option value=false>Z-A</ion-option>
+            <ion-select [(ngModel)]="order" (ionChange)="onSelectChange($event)">
+              <ion-option value="a-z">A-Z</ion-option>
+              <ion-option value="z-a">Z-A</ion-option>
+              <ion-option value="earliest">{{'order_label_earliest'|translate}}</ion-option>
+              <ion-option value="latest">{{'order_label_newest'|translate}}</ion-option>
             </ion-select>
           </ion-item>
         </div>
