--- a/frontend/studente/src/pages/mobilities/mobilities.html
+++ b/frontend/studente/src/pages/mobilities/mobilities.html
@@ -18,9 +18,11 @@
     <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
     <ion-item>
       <ion-label>{{'mobility_order_label'|translate}}</ion-label>
-      <ion-select [(ngModel)]="order">
-        <ion-option value=true>A-Z</ion-option>
-        <ion-option value=false>Z-A</ion-option>
+      <ion-select [(ngModel)]="order" (ionChange)="onSelectChange($event)">
+        <ion-option value="a-z">A-Z</ion-option>
+        <ion-option value="z-a">Z-A</ion-option>
+        <ion-option value="earliest">{{'order_label_earliest'|translate}}</ion-option>
+        <ion-option value="latest">{{'order_label_newest'|translate}}</ion-option>
       </ion-select>
     </ion-item>
   </div>
@@ -33,7 +35,7 @@
    </ion-row>
   </ion-grid>
   <ion-list *ngIf="(mobilities && mobilities.length>0)" >
-    <ion-card  *ngFor="let mobility of mobilities| experiencefilter:filter:'title'|  orderBy:'experience.attributes.dateFrom':false; let i = index">
+    <ion-card  *ngFor="let mobility of mobilities| experiencefilter:filter:'title'; let i = index">
 <mobility-panel [mobility]="mobility" [index]="i" (onDeleted)="onDeleted($event)"></mobility-panel>
     </ion-card>
   </ion-list>
