--- a/frontend/studente/src/pages/stages/stages.html
+++ b/frontend/studente/src/pages/stages/stages.html
@@ -35,7 +35,7 @@
    </ion-row>
   </ion-grid>
   <ion-list *ngIf="(stages && stages.length>0)" >
-    <ion-card  *ngFor="let stage of stages| experiencefilter:filter:'title'|  orderBy:'experience.attributes.dateFrom':false; let i = index">
+    <ion-card  *ngFor="let stage of stages| experiencefilter:filter:'title'; let i = index">
 <stage-panel [stage]="stage" [index]="i" (onDeleted)="onDeleted($event)"></stage-panel>
     </ion-card>
   </ion-list>
