--- a/frontend/studente/src/pages/certifications/certification.html
+++ b/frontend/studente/src/pages/certifications/certification.html
@@ -25,12 +25,13 @@
         </ion-label>
       </ion-col>
       <ion-col col-3>
-        <ion-label>{{doc.attributes.name}}
-        </ion-label>
+        <ion-label *ngIf="doc.attributes.title">{{doc.attributes.title}}</ion-label>
+        <ion-label *ngIf="!doc.attributes.title && doc.filename">{{doc.filename}}</ion-label>
       </ion-col>
       <ion-col col-6>
         <ion-item>
-          <a download="document.txt" class="button label-button" href="{{doc.documentUri}}">
+            <!-- href="{{doc.documentUri}} -->
+          <a download="document.txt" class="button label-button" (click)="downloadDocument(doc)"> 
             <ion-icon name="md-download"></ion-icon>
           </a>
         </ion-item>
