--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -163,8 +163,9 @@
          <ion-col col-3>
           <ion-label>{{doc.documentUri}}</ion-label>
         </ion-col>
-           <ion-col col-3>
-          <ion-label>{{doc.attributes.title}}</ion-label>
+        <ion-col col-3>
+            <ion-label *ngIf="doc.attributes.title">{{doc.attributes.title}}</ion-label>
+            <ion-label *ngIf="!doc.attributes.title && doc.filename">{{doc.filename}}</ion-label>
         </ion-col> 
         <ion-col col-3>
           <button class="button-add-stage label-button" ion-button clear (click)="removeOldDocument(doc,i)">{{'addDocument_remove_actual_document_label'|translate}}</button>
