Fix for localized date.

--- a/frontend/studente/src/pages/activities/activity.html
+++ b/frontend/studente/src/pages/activities/activity.html
@@ -7,9 +7,9 @@
   <!--<div padding>-->
   <div class="experience-title"> <span class="registration-institute-label">{{'activity_title_label'|translate}}</span> {{activity.experience.attributes.title}}</div>
   <div class="experience-title"> <span class="registration-institute-label">{{'activity_dateFrom_label'|translate}}</span>{{activity.experience.attributes.dateFrom
-    |date}}</div>
+    |localizedDate}}</div>
   <div class="experience-title"> <span class="registration-institute-label">{{'activity_dateTo_label'|translate}}</span>{{activity.experience.attributes.dateTo
-    |date}}</div>
+    |localizedDate}}</div>
   <div class="experience-title"> <span class="registration-institute-label">{{'activity_location_label'|translate}}</span>{{activity.experience.attributes.location}}</div>
   <div class="experience-title"> <span class="registration-institute-label">{{'activity_description_label'|translate}}</span>{{activity.experience.attributes.description}}</div>
   <!--<div class="experience-title" *ngIf="activity.document!=null && activity.document.documentPresent"> <span class="registration-institute-label">{{'document_document_label'|translate}}</span>
