--- a/frontend/studente/src/pages/events/events.html
+++ b/frontend/studente/src/pages/events/events.html
@@ -41,8 +41,8 @@
       </div>
       <div padding *ngIf="isDetailsShown(event)">
          <div class="experience-title"> <span class="registration-institute-label">{{'event_title_label'|translate}}</span> {{event.attributes.title}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'event_dateFrom_label'|translate}}</span>{{event.attributes.dateFrom |date}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'event_dateTo_label'|translate}}</span>{{event.attributes.dateTo |date}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'event_dateFrom_label'|translate}}</span>{{event.attributes.dateFrom |localizedDate}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'event_dateTo_label'|translate}}</span>{{event.attributes.dateTo |localizedDate}}</div>
          <div class="experience-title"> <span class="registration-institute-label">{{'event_location_label'|translate}}</span>{{event.attributes.location}}</div>
          <div class="experience-title"> <span class="registration-institute-label">{{'event_description_label'|translate}}</span>{{event.attributes.description}}</div>
         <div *ngIf="!event.attributes.institutional">
