--- a/frontend/studente/src/pages/mobilities/mobility.html
+++ b/frontend/studente/src/pages/mobilities/mobility.html
@@ -5,10 +5,10 @@
 </div>
 <div padding *ngIf="index == 0">
   <div class="experience-title" *ngIf="mobility.experience.attributes.dateFrom"> <span class="registration-institute-label">{{'mobility_dateFrom_label'|translate}}</span>{{mobility.experience.attributes.dateFrom
-    |date}}
+    |localizedDate}}
   </div>
   <div class="experience-title" *ngIf="mobility.experience.attributes.dateTo"> <span class="registration-institute-label">{{'mobility_dateTo_label'|translate}}</span>{{mobility.experience.attributes.dateTo
-    |date}}
+    |localizedDate}}
   </div>
   <div class="experience-title" *ngIf="mobility.experience.attributes.location"> <span class="registration-institute-label">{{'mobility_location_label'|translate}}</span>{{mobility.experience.attributes.location}}</div>
   <div class="experience-title" *ngIf="mobility.experience.attributes.lang"> <span class="registration-institute-label">{{'mobility_language_label'|translate}}</span>{{mobility.experience.attributes.lang}}</div>
