--- a/frontend/studente/src/pages/activities/activity.html
+++ b/frontend/studente/src/pages/activities/activity.html
@@ -23,19 +23,26 @@
     <button class="label-button" ion-button clear (click)="updateActivity(activity)">{{'update_button'|translate}}</button>
   </div>
 </div>-->
-<ion-row class="experience-title" *ngIf="activity.document!=null && activity.document.documentPresent">
-    <ion-col col-3>
-      <ion-label>{{'document_document_label'|translate}}
-      </ion-label>
-    </ion-col>
-    <ion-col col-6>
-      <ion-item>
-        <a download="document.txt" class="button label-button" href="{{ activity.document.documentUri}}">
-          <ion-icon name="md-download"></ion-icon>
-        </a>
-      </ion-item>
-    </ion-col>
-  </ion-row>
+<ng-container *ngFor="let doc of activity.documents">
+    <ion-row class="experience-title" *ngIf="doc!=null && doc.documentPresent">
+      <ion-col col-3>
+        <ion-label>{{'document_document_label'|translate}}
+        </ion-label>
+      </ion-col>
+      <ion-col col-3>
+        <ion-label *ngIf="doc.attributes.title">{{doc.attributes.title}}</ion-label>
+        <ion-label *ngIf="!doc.attributes.title && doc.filename">{{doc.filename}}</ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+            <!-- href="{{doc.documentUri}} -->
+          <a download="document.txt" class="button label-button" (click)="downloadDocument(doc)"> 
+            <ion-icon name="md-download"></ion-icon>
+          </a>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ng-container>
   <div class="experience-action-buttons" *ngIf="!activity.experience.attributes.institutional">
     <button class="label-button" ion-button clear (click)="deleteActivity()">{{'delete_button'|translate}}</button>
     <button class="label-button" ion-button clear (click)="updateActivity()">{{'update_button'|translate}}</button>
