--- a/frontend/studente/src/pages/addJob/addJob.html
+++ b/frontend/studente/src/pages/addJob/addJob.html
@@ -93,38 +93,43 @@
           </div>
         </ion-col>
       </ion-row>
-      <ion-row *ngIf="document && document.documentPresent">
-
-        <ion-col col-3>
-          <ion-label>{{'addDocument_present_document_label'|translate}}</ion-label>
-        </ion-col>
-        <ion-col col-6>
-          <ion-item>
-            <a download="document.txt" class="button label-button" href="{{ document.documentUri}}">
-              <ion-icon name="md-download"></ion-icon>
-            </a>
-
-          </ion-item>
-        </ion-col>
-        <ion-col col-3>
-          <button class="button-add-job label-button" ion-button clear (click)="removeActualDocument()">{{'addDocument_remove_actual_document_label'|translate}}</button>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-
-        <ion-col col-3>
-          <ion-label>{{'addDocument_load_document_label'|translate}}</ion-label>
-        </ion-col>
-        <ion-col col-6>
-          <ion-item>
-            <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
-          </ion-item>
-        </ion-col>
-        <ion-col col-3>
-          <button class="button-add-job label-button" ion-button clear (click)="removeCertification()">{{'addDocument_remove_document_label'|translate}}</button>
-        </ion-col>
-
-      </ion-row>
+      <ion-row *ngFor="let doc of documents;let i = index">
+          <ion-col col-3>
+            <ion-label>{{'addDocument_present_document_label'|translate}}</ion-label>
+          </ion-col>
+          <ion-col col-3>
+            <ion-label>{{doc.documentUri}}</ion-label>
+          </ion-col>
+          <ion-col col-3>
+            <ion-label *ngIf="doc.attributes.title">{{doc.attributes.title}}</ion-label>
+            <ion-label *ngIf="!doc.attributes.title && doc.filename">{{doc.filename}}</ion-label>
+          </ion-col>
+          <ion-col col-3>
+            <button class="button-add-stage label-button" ion-button clear (click)="removeOldDocument(doc,i)">{{'addDocument_remove_actual_document_label'|translate}}</button>
+          </ion-col>
+        </ion-row>
+  
+        <ion-row>
+          <ion-col col-3>
+            <ion-label>{{'addDocument_load_document_label'|translate}}</ion-label>
+          </ion-col>
+          <ion-col col-3>
+            <ion-item>
+              <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
+            </ion-item>
+          </ion-col>
+          <ion-col col-3>
+            <ion-item>
+              <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addDocument_name_doc_placeholder'|translate}}"
+                [(ngModel)]="document.attributes.title"></ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <button ion-button clear icon-only (click)="addDocument()">
+        <ion-icon name='md-add-circle' is-active="false"></ion-icon>
+      </button>
+          </ion-col>
+        </ion-row>
       <ion-row>
         <ion-col><button class="action-button " ion-button block (click)="addJob()">{{'save_button_label'|translate}}</button></ion-col>
         <ion-col><button class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
