--- a/frontend/studente/src/pages/jobs/job.html
+++ b/frontend/studente/src/pages/jobs/job.html
@@ -21,19 +21,26 @@
     <button class="label-button" ion-button clear (click)="updateJob()">{{'update_button'|translate}}</button>
   </div>
 </div>-->
-<ion-row class="experience-title" *ngIf="job.document!=null && job.document.documentPresent">
-    <ion-col col-3>
-      <ion-label>{{'document_document_label'|translate}}
-      </ion-label>
-    </ion-col>
-    <ion-col col-6>
-      <ion-item>
-        <a download="document.txt" class="button label-button" href="{{ job.document.documentUri}}">
-          <ion-icon name="md-download"></ion-icon>
-        </a>
-      </ion-item>
-    </ion-col>
-  </ion-row>
+<ng-container *ngFor="let doc of job.documents">
+    <ion-row class="experience-title" *ngIf="doc!=null && doc.documentPresent">
+      <ion-col col-3>
+        <ion-label>{{'document_document_label'|translate}}
+        </ion-label>
+      </ion-col>
+      <ion-col col-3>
+        <ion-label *ngIf="doc.attributes.title">{{doc.attributes.title}}</ion-label>
+        <ion-label *ngIf="!doc.attributes.title && doc.filename">{{doc.filename}}</ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+            <!-- href="{{doc.documentUri}} -->
+          <a download="document.txt" class="button label-button" (click)="downloadDocument(doc)"> 
+            <ion-icon name="md-download"></ion-icon>
+          </a>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ng-container>
   <div class="experience-action-buttons" *ngIf="!job.experience.attributes.institutional">
     <button class="label-button" ion-button clear (click)="deleteJob()">{{'delete_button'|translate}}</button>
     <button class="label-button" ion-button clear (click)="updateJob()">{{'update_button'|translate}}</button>
