--- a/frontend/studente/src/pages/addMobility/addMobility.html
+++ b/frontend/studente/src/pages/addMobility/addMobility.html
@@ -16,8 +16,8 @@
         <ion-col col-6>
           <div class="form-input">
             <ion-input class="border-input" type="text" formControlName="title" [class.invalid]="!mobilityForm.controls.title.valid && (mobilityForm.controls.title.dirty || submitAttempt)"
-             placeholder="{{'addMobility_title_placeholder'|translate}}" [(ngModel)]="mobility.title"></ion-input>
-             <div class="error-label" [style.visibility]="(!mobilityForm.controls.title.valid && (mobilityForm.controls.title.dirty || submitAttempt))?'visible':'hidden'">
+              placeholder="{{'addMobility_title_placeholder'|translate}}" [(ngModel)]="mobility.title"></ion-input>
+            <div class="error-label" [style.visibility]="(!mobilityForm.controls.title.valid && (mobilityForm.controls.title.dirty || submitAttempt))?'visible':'hidden'">
               <p>{{'field_missing_label'|translate}}</p>
             </div>
           </div>
@@ -60,7 +60,7 @@
           </div>
         </ion-col>
       </ion-row>
-            <ion-row>
+      <ion-row>
 
         <ion-col col-3>
           <ion-label>{{'addMobility_language_label'|translate}}</ion-label>
@@ -93,37 +93,41 @@
           </div>
         </ion-col>
       </ion-row>
-      <ion-row *ngIf="document && document.documentPresent">
-
+      <ion-row *ngFor="let doc of documents;let i = index">
         <ion-col col-3>
           <ion-label>{{'addDocument_present_document_label'|translate}}</ion-label>
         </ion-col>
-        <ion-col col-6>
-          <ion-item>
-            <a download="document.txt" class="button label-button" href="{{ document.documentUri}}">
-              <ion-icon name="md-download"></ion-icon>
-            </a>
-
-          </ion-item>
+        <ion-col col-3>
+          <ion-label>{{doc.documentUri}}</ion-label>
         </ion-col>
         <ion-col col-3>
-          <button class="button-add-mobility label-button" ion-button clear (click)="removeActualDocument()">{{'addDocument_remove_actual_document_label'|translate}}</button>
+          <ion-label *ngIf="doc.attributes.title">{{doc.attributes.title}}</ion-label>
+          <ion-label *ngIf="!doc.attributes.title && doc.filename">{{doc.filename}}</ion-label>
+        </ion-col>
+        <ion-col col-3>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeOldDocument(doc,i)">{{'addDocument_remove_actual_document_label'|translate}}</button>
         </ion-col>
       </ion-row>
       <ion-row>
-
         <ion-col col-3>
           <ion-label>{{'addDocument_load_document_label'|translate}}</ion-label>
         </ion-col>
-        <ion-col col-6>
+        <ion-col col-3>
           <ion-item>
             <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
           </ion-item>
         </ion-col>
         <ion-col col-3>
-          <button class="button-add-mobility label-button" ion-button clear (click)="removeCertification()">{{'addDocument_remove_document_label'|translate}}</button>
+          <ion-item>
+            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addDocument_name_doc_placeholder'|translate}}"
+              [(ngModel)]="document.attributes.title"></ion-input>
+          </ion-item>
         </ion-col>
-
+        <ion-col>
+          <button ion-button clear icon-only (click)="addDocument()">
+        <ion-icon name='md-add-circle' is-active="false"></ion-icon>
+      </button>
+        </ion-col>
       </ion-row>
       <ion-row>
         <ion-col><button class="action-button " ion-button block (click)="addMobility()">{{'save_button_label'|translate}}</button></ion-col>
