--- a/frontend/studente/src/pages/activities/activity.html
+++ b/frontend/studente/src/pages/activities/activity.html
@@ -7,9 +7,11 @@
   <!--<div padding>-->
   <div class="experience-title"> <span class="registration-institute-label">{{'activity_title_label'|translate}}</span> {{activity.experience.attributes.title}}</div>
   <div class="experience-title"> <span class="registration-institute-label">{{'activity_dateFrom_label'|translate}}</span>{{activity.experience.attributes.dateFrom
-    |localizedDate}}</div>
+    |localizedDate}}
+  </div>
   <div class="experience-title"> <span class="registration-institute-label">{{'activity_dateTo_label'|translate}}</span>{{activity.experience.attributes.dateTo
-    |localizedDate}}</div>
+    |localizedDate}}
+  </div>
   <div class="experience-title"> <span class="registration-institute-label">{{'activity_location_label'|translate}}</span>{{activity.experience.attributes.location}}</div>
   <div class="experience-title"> <span class="registration-institute-label">{{'activity_description_label'|translate}}</span>{{activity.experience.attributes.description}}</div>
   <!--<div class="experience-title" *ngIf="activity.document!=null && activity.document.documentPresent"> <span class="registration-institute-label">{{'document_document_label'|translate}}</span>
@@ -23,7 +25,7 @@
     <button class="label-button" ion-button clear (click)="updateActivity(activity)">{{'update_button'|translate}}</button>
   </div>
 </div>-->
-<ng-container *ngFor="let doc of activity.documents">
+  <ng-container *ngFor="let doc of activity.documents">
     <ion-row class="experience-title" *ngIf="doc!=null && doc.documentPresent">
       <ion-col col-3>
         <ion-label>{{'document_document_label'|translate}}
@@ -35,10 +37,8 @@
       </ion-col>
       <ion-col col-6>
         <ion-item>
-            <!-- href="{{doc.documentUri}} -->
-          <a download="document.txt" class="button label-button" (click)="downloadDocument(doc)"> 
-            <ion-icon name="md-download"></ion-icon>
-          </a>
+
+          <ion-icon name="md-download" (click)="downloadDocument(doc)"></ion-icon>
         </ion-item>
       </ion-col>
     </ion-row>
@@ -54,7 +54,8 @@
     <button class="label-button" ion-button clear (click)="addDocument()" *ngIf="(activity.document!=null && activity.document.documentPresent)">
         {{'modify_document_button'|translate}}
     </button>
-    <button *ngIf="(activity.document!=null && activity.document.documentPresent)" class="button-add-stage label-button" ion-button clear (click)="removeActualDocument()">
+    <button *ngIf="(activity.document!=null && activity.document.documentPresent)" class="button-add-stage label-button" ion-button
+      clear (click)="removeActualDocument()">
         {{'addDocument_remove_actual_document_label'|translate}}
         </button>
   </div>
