--- a/frontend/studente/src/pages/addJob/addJob.html
+++ b/frontend/studente/src/pages/addJob/addJob.html
@@ -16,8 +16,8 @@
         <ion-col col-6>
           <div class="form-input">
             <ion-input class="border-input" type="text" formControlName="title" [class.invalid]="!jobForm.controls.title.valid && (jobForm.controls.title.dirty || submitAttempt)"
-             placeholder="{{'addJob_title_placeholder'|translate}}" [(ngModel)]="job.title"></ion-input>
-             <div class="error-label" [style.visibility]="(!jobForm.controls.title.valid && (jobForm.controls.title.dirty || submitAttempt))?'visible':'hidden'">
+              placeholder="{{'addJob_title_placeholder'|translate}}" [(ngModel)]="job.title"></ion-input>
+            <div class="error-label" [style.visibility]="(!jobForm.controls.title.valid && (jobForm.controls.title.dirty || submitAttempt))?'visible':'hidden'">
               <p>{{'field_missing_label'|translate}}</p>
             </div>
           </div>
@@ -59,8 +59,8 @@
         </ion-col>
         <ion-col col-6>
           <div class="form-input">
-            <ion-input type="text"  class="border-input"  formControlName="location"   [class.invalid]="!jobForm.controls.location.valid && (jobForm.controls.location.dirty || submitAttempt)" placeholder="{{'addJob_address_placeholder'|translate}}"
-              (input)="getItems($event)" [(ngModel)]="job.location">
+            <ion-input type="text" class="border-input" formControlName="location" [class.invalid]="!jobForm.controls.location.valid && (jobForm.controls.location.dirty || submitAttempt)"
+              placeholder="{{'addJob_address_placeholder'|translate}}" (input)="getItems($event)" [(ngModel)]="job.location">
             </ion-input>
             <div class="error-label" [style.visibility]="(!jobForm.controls.location.valid && (jobForm.controls.location.dirty || submitAttempt))?'visible':'hidden'">
               <p>{{'field_missing_label'|translate}}</p>
@@ -102,42 +102,42 @@
         </ion-col>
       </ion-row>
       <ion-row *ngFor="let doc of documents;let i = index">
-          <ion-col col-3>
-            <ion-label>{{'addDocument_present_document_label'|translate}}</ion-label>
-          </ion-col>
-          <ion-col col-3>
-            <ion-label>{{doc.documentUri}}</ion-label>
-          </ion-col>
-          <ion-col col-3>
+        <ion-col col-3>
+          <ion-label>{{'addDocument_present_document_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-3>
+          <ion-item>
             <ion-label *ngIf="doc.attributes.title">{{doc.attributes.title}}</ion-label>
             <ion-label *ngIf="!doc.attributes.title && doc.filename">{{doc.filename}}</ion-label>
-          </ion-col>
-          <ion-col col-3>
-            <button class="button-add-stage label-button" ion-button clear (click)="removeOldDocument(doc,i)">{{'addDocument_remove_actual_document_label'|translate}}</button>
-          </ion-col>
-        </ion-row>
-  
-        <ion-row>
-          <ion-col col-3>
-            <ion-label>{{'addDocument_load_document_label'|translate}}</ion-label>
-          </ion-col>
-          <ion-col col-3>
-            <ion-item>
-              <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
-            </ion-item>
-          </ion-col>
-          <ion-col col-3>
-            <ion-item>
-              <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addDocument_name_doc_placeholder'|translate}}"
-                [(ngModel)]="document.attributes.title"></ion-input>
-            </ion-item>
-          </ion-col>
-          <ion-col>
-            <button ion-button clear icon-only (click)="addDocument()">
+          </ion-item>
+        </ion-col>
+        <ion-col col-3></ion-col>
+        <ion-col col-3>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeOldDocument(doc,i)">{{'addDocument_remove_actual_document_label'|translate}}</button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col col-3>
+          <ion-label>{{'addDocument_load_document_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-3>
+          <ion-item>
+            <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
+          </ion-item>
+        </ion-col>
+        <ion-col col-3>
+          <ion-item>
+            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addDocument_name_doc_placeholder'|translate}}"
+              [(ngModel)]="document.attributes.title"></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <button ion-button clear icon-only (click)="addDocument()">
         <ion-icon name='md-add-circle' is-active="false"></ion-icon>
       </button>
-          </ion-col>
-        </ion-row>
+        </ion-col>
+      </ion-row>
       <ion-row>
         <ion-col><button class="action-button " ion-button block (click)="addJob()">{{'save_button_label'|translate}}</button></ion-col>
         <ion-col><button class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
