--- a/frontend/studente/src/pages/mobilities/mobility.html
+++ b/frontend/studente/src/pages/mobilities/mobility.html
@@ -14,25 +14,22 @@
   <div class="experience-title" *ngIf="mobility.experience.attributes.lang"> <span class="registration-institute-label">{{'mobility_language_label'|translate}}</span>{{mobility.experience.attributes.lang}}</div>
   <div class="experience-title" *ngIf="mobility.experience.attributes.description"> <span class="registration-institute-label">{{'mobility_description_label'|translate}}</span>{{mobility.experience.attributes.description}}</div>
   <ng-container *ngFor="let doc of mobility.documents">
-      <ion-row class="experience-title" *ngIf="doc!=null && doc.documentPresent">
-        <ion-col col-3>
-          <ion-label>{{'document_document_label'|translate}}
-          </ion-label>
-        </ion-col>
-        <ion-col col-3>
-          <ion-label *ngIf="doc.attributes.title">{{doc.attributes.title}}</ion-label>
-          <ion-label *ngIf="!doc.attributes.title && doc.filename">{{doc.filename}}</ion-label>
-        </ion-col>
-        <ion-col col-6>
-          <ion-item>
-              <!-- href="{{doc.documentUri}} -->
-            <a download="document.txt" class="button label-button" (click)="downloadDocument(doc)"> 
-              <ion-icon name="md-download"></ion-icon>
-            </a>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-    </ng-container>
+    <ion-row class="experience-title" *ngIf="doc!=null && doc.documentPresent">
+      <ion-col col-3>
+        <ion-label>{{'document_document_label'|translate}}
+        </ion-label>
+      </ion-col>
+      <ion-col col-3>
+        <ion-label *ngIf="doc.attributes.title">{{doc.attributes.title}}</ion-label>
+        <ion-label *ngIf="!doc.attributes.title && doc.filename">{{doc.filename}}</ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+          <ion-icon name="md-download" (click)="downloadDocument(doc)"></ion-icon>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ng-container>
   <div class="experience-action-buttons" *ngIf="!mobility.experience.attributes.institutional">
     <button class="label-button" ion-button clear (click)="deleteMobility()">{{'delete_button'|translate}}</button>
     <button class="label-button" ion-button clear (click)="updateMobility()">{{'update_button'|translate}}</button>
